--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,13 @@ img:hover {
   background-color: #dd4444;
 }
 
-/* create a column class! make sure all of the divs within 'container's have a class of 'column' */
+.col {
+}
 
-/* create your tile classes! we recommend .small .med .large */
+.small{
+}
+.med{
+}
+.large{
+}
+
