--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,21 @@ img:hover {
   background-color: #dd4444;
 }
 
-/* create a column class! make sure all of the divs within 'container's have a class of 'column' */
+.col {
+  width: 30%;
+  display: inline-block
+}
 
-/* create your tile classes! we recommend .small .med .large */
+.small{
+  height: 100%;
+  width: 100%;
+}
+.med{
+  height: 201.5%;
+  width: 201.5%;
+}
+.large{
+  height: 303%;
+  width: 303%;
+}
+
